#5 Criar conteudo do site

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Landing Page</title>
+	<title>MAUA NET</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
@@ -9,25 +9,20 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>Título</h1>
-			<nav>
-				<ul>
-					<li><a href="#">Link 1</a></li>
-				</ul>
-			</nav>
+			<h1>MAUANET</h1>
 		</header>
 		<main>
 			<section>
-				<h2>Subtítulo</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel ex ac nisi dictum aliquet. Integer a sapien vestibulum, bibendum leo a, aliquam nisl. Nulla facilisi. Praesent vel ultrices mauris, in interdum libero. Fusce et pharetra nisl. Donec fermentum volutpat justo, ac tristique dolor tincidunt in. Vestibulum lacinia turpis ac odio posuere, at bibendum enim auctor. Sed a erat vel lorem gravida laoreet sed ac est.</p>
-				<button>Inscreva-se agora</button>
+				<h3>Venha fazer seu futuro conosco</h3>
+				<p>O instituo maua foi o vencedor do segundo premio de inovação no ensino superior do SEMESP na modalidade inovação na aprendizagem </p>
 			</section>
 			<aside>
-				<h3>Anúncio</h3>
-				<p>Nullam vel ex ac nisi dictum aliquet. Integer a sapien vestibulum, bibendum leo a, aliquam nisl. Nulla facilisi. Praesent vel ultrices mauris, in interdum libero.</p>
+				<h3>Referencia no mercado</h3>
+				<p>Maua obtem 4 estrelas em todos os cursos de graduação pelo guia quero | estadão da faculdade  </p>
 				<button>Saiba mais</button>
 			</aside>
 		</main>
+		<img src="maua_logo.png" width="70%" margin-left = "50px">
 		<footer>
 			<p>Todos os direitos reservados. &copy; 2023</p>
 		</footer>
