#9 Escolher e implementar  o design e layout

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -22,7 +22,7 @@
 				<button>Saiba mais</button>
 			</aside>
 		</main>
-		<img src="maua_logo.png" width="70%" margin-left = "50px">
+		<img src="logo.png" width="70%" margin-left = "50%">
 		<footer>
 			<p>Todos os direitos reservados. &copy; 2023</p>
 		</footer>
