#8 Adicionar call-to-action (link para página principal da Mauá)

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -19,7 +19,7 @@
 			<aside>
 				<h3>Referencia no mercado</h3>
 				<p>Maua obtem 4 estrelas em todos os cursos de graduação pelo guia quero | estadão da faculdade  </p>
-				<button>Saiba mais</button>
+				<button><a href="https://www2.maua.br/mauanet.2.0">Login</a></button>
 			</aside>
 		</main>
 		<img src="logo.png" width="70%" margin-left = "50%">
